# whisper-shell

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  apply.patch  cmake_install.cmake  fetch_deps  logtest.conf  whisper-shell
src/: CMakeLists.txt  Makefile  app.c  app.h  cmake_install.cmake  main.c  main.c.rej  ui.c  ui.h  ui_display_log.c  ui_display_log.h  ui_history.c  ui_history.h  ui_tab.c  ui_tab.h
